--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ scikit-learn>=1.3.0
 seaborn>=0.12.0
 python-dateutil>=2.8.0
 fpdf2>=2.7.0
+jinja2>=3.1.0
+kaleido>=0.2.1
 pytest>=7.4.0
 pytest-cov>=4.1.0
 pytest-mock>=3.11.0
