Fix Lambda package size: use requirements-lambda.txt with only 3 runtime deps
- Create requirements-lambda.txt with only plotly, networkx, jinja2
- boto3 excluded (provided by Lambda Python 3.12 runtime)
- Removed numpy, pandas, scikit-learn, matplotlib, seaborn, kaleido, fpdf2
  (none of these are imported by any Lambda source file)
- Removed dev tools: pytest, pytest-cov, pytest-mock, black, flake8, mypy
- buildspec.yml: install from requirements-lambda.txt instead of requirements.txt
- Reduces package from >250MB unzipped to roughly 30-40MB

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,7 @@ phases:
       - cd ..
       - echo Installing dependencies
       - pip install --upgrade pip
-      - pip install -r repo/requirements.txt -t ./package/
+      - pip install -r repo/requirements-lambda.txt -t ./package/
 
   pre_build:
     commands:
